# Relume-G3--Infra

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARQUITETURA_RELLUNA.md  BENCHMARK_MEDICO_JURIDICO.md  DIAGNOSTICO_PIPELINE.md  Dockerfile  Makefile  PLANO_PIPELINE.md  README.md  ROADMAP_FASE_1_4.md  SECURITY.md  STATUS_CONSOLIDADO.md  debug_dm_helper.py  debug_profile_pipeline.py  debug_run_pipeline.py  diagnostico_limpo.txt  diagnostico_pipeline.txt  dm_real.json  docker-compose.dev.yml  fix_pipeline.py  pyproject.toml  repo_tree.txt  requirements-dev.txt  requirements.txt  rg_extractor.py  scaffold_relluna.py  schema.json  schema.json.save  trace_pipeline.txt  transcribe_audio.py
.codex/: config.toml
.uploads/: 146914e63ad3f4dd1da879d0df45cb3b41e58d42c8c35c9f3b679b97dee2db92_test.txt
api/: auth.py  main.py  startup.sh
docs/: ARQUITETURA_RELLUNA.md  CAMINHO_OFICIAL.md  KAUSAL_ENGINE.md  NTEP_EXPANSION_REPORT.md  PLANO_PIPELINE.md
frontend/: app.css  app.js  data.js  index.html
ocr_module/: __init__.py  core.py  normalizer.py  perspective.py  preprocess.py  validators.py
relluna.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: benchmark_runner.py
tests/: conftest.py  generate_schema_v0_2_0.py  test_anti_nexo.py  test_blob_artefact_store_contract.py  test_case_endpoint_contract.py  test_caso_multi_documento.py  test_causal_timeline_readmodel.py  test_content_safety.py  test_context_inference_api.py  test_current_dm_compatibility.py  test_demo_frontend_routes.py  test_dm.py  (+58 more)
(+231 files in other folders)
